--- a/src/img/stack/sprite.stack.html
+++ b/src/img/stack/sprite.stack.html
@@ -188,6 +188,135 @@ selector is used to show the very shape that is referenced by the fragment ident
 					<h2>whatshot</h2>
 				</li>
 			</ul>
+<ul>
+
+				<li title="Group_2">
+					<div class="icon-box">
+
+						<!-- Group_2 -->
+						<img src="../icons/icons.svg#Group_2" class="svg-Group_2-dims" alt="Group_2"/>
+
+					</div>
+					<h2>Group_2</h2>
+				</li>
+				<li title="Logo">
+					<div class="icon-box">
+
+						<!-- Logo -->
+						<img src="../icons/icons.svg#Logo" class="svg-Logo-dims" alt="Logo"/>
+
+					</div>
+					<h2>Logo</h2>
+				</li>
+				<li title="TOXIN">
+					<div class="icon-box">
+
+						<!-- TOXIN -->
+						<img src="../icons/icons.svg#TOXIN" class="svg-TOXIN-dims" alt="TOXIN"/>
+
+					</div>
+					<h2>TOXIN</h2>
+				</li>
+				<li title="favorite">
+					<div class="icon-box">
+
+						<!-- favorite -->
+						<img src="../icons/icons.svg#favorite" class="svg-favorite-dims" alt="favorite"/>
+
+					</div>
+					<h2>favorite</h2>
+				</li>
+				<li title="favorite_border">
+					<div class="icon-box">
+
+						<!-- favorite_border -->
+						<img src="../icons/icons.svg#favorite_border" class="svg-favorite_border-dims" alt="favorite_border"/>
+
+					</div>
+					<h2>favorite_border</h2>
+				</li>
+				<li title="fb">
+					<div class="icon-box">
+
+						<!-- fb -->
+						<img src="../icons/icons.svg#fb" class="svg-fb-dims" alt="fb"/>
+
+					</div>
+					<h2>fb</h2>
+				</li>
+				<li title="icons">
+					<div class="icon-box">
+
+						<!-- icons -->
+						<img src="../icons/icons.svg#icons" class="svg-icons-dims" alt="icons"/>
+
+					</div>
+					<h2>icons</h2>
+				</li>
+				<li title="insert_emoticon">
+					<div class="icon-box">
+
+						<!-- insert_emoticon -->
+						<img src="../icons/icons.svg#insert_emoticon" class="svg-insert_emoticon-dims" alt="insert_emoticon"/>
+
+					</div>
+					<h2>insert_emoticon</h2>
+				</li>
+				<li title="inst">
+					<div class="icon-box">
+
+						<!-- inst -->
+						<img src="../icons/icons.svg#inst" class="svg-inst-dims" alt="inst"/>
+
+					</div>
+					<h2>inst</h2>
+				</li>
+				<li title="location_city">
+					<div class="icon-box">
+
+						<!-- location_city -->
+						<img src="../icons/icons.svg#location_city" class="svg-location_city-dims" alt="location_city"/>
+
+					</div>
+					<h2>location_city</h2>
+				</li>
+				<li title="star">
+					<div class="icon-box">
+
+						<!-- star -->
+						<img src="../icons/icons.svg#star" class="svg-star-dims" alt="star"/>
+
+					</div>
+					<h2>star</h2>
+				</li>
+				<li title="star_border">
+					<div class="icon-box">
+
+						<!-- star_border -->
+						<img src="../icons/icons.svg#star_border" class="svg-star_border-dims" alt="star_border"/>
+
+					</div>
+					<h2>star_border</h2>
+				</li>
+				<li title="twitter">
+					<div class="icon-box">
+
+						<!-- twitter -->
+						<img src="../icons/icons.svg#twitter" class="svg-twitter-dims" alt="twitter"/>
+
+					</div>
+					<h2>twitter</h2>
+				</li>
+				<li title="whatshot">
+					<div class="icon-box">
+
+						<!-- whatshot -->
+						<img src="../icons/icons.svg#whatshot" class="svg-whatshot-dims" alt="whatshot"/>
+
+					</div>
+					<h2>whatshot</h2>
+				</li>
+			</ul>
 
 <!--
 ====================================================================================================
@@ -195,7 +324,7 @@ selector is used to show the very shape that is referenced by the fragment ident
 
 		</section>
 		<footer>
-			<p>Generated at Sat, 30 Jul 2022 01:05:54 GMT by <a href="https://github.com/svg-sprite/svg-sprite" target="_blank" rel="noopener noreferrer">svg-sprite</a>.</p>
+			<p>Generated at Sat, 30 Jul 2022 01:29:51 GMT by <a href="https://github.com/svg-sprite/svg-sprite" target="_blank" rel="noopener noreferrer">svg-sprite</a>.</p>
 		</footer>
 	</body>
 </html>
