Add arrows and made header__menu

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -3,8 +3,8 @@
         <div class="header__content _container">
             <div class="header__body">
                 <div class="header__main">
-                    <a href="#" class="header__logo"><img src="img/Logo.svg" alt="лого"></a>
-                    <a href="#" class="header__logotext"><img src="../img/icons/icons.svg#TOXIN" alt="TOXIN"></a>
+                    <a href="#" class="header__logo"><img src="img/svgicons/Logo.svg" alt="лого"></a>
+                    <a href="#" class="header__logotext"><img src="img/svgicons/TOXIN.svg" alt="TOXIN"/></a>
                 </div>
 
 
@@ -16,7 +16,7 @@
                             </li>
                             <li class="menu__item">
                                 <a href="#" class="menu__link">Услуги</a>
-                                <button data-spoller type="button" class="menu__arrow _icon-arrow-down"></button>
+                                <button data-spoller type="button" class="menu__arrow _headerarrowone _icon-arrow-down"></button>
                                 <ul class="menu__sub-list">
                                     <li class="menu__sub-item">
                                         <a href="#" class="menu__sub-link">Product 1</a>
@@ -37,7 +37,7 @@
                             </li>
                             <li class="menu__item">
                                 <a href="#" class="menu__link">Соглашения</a>
-                                <button data-spoller type="button" class="menu__arrow _icon-arrow-down"></button>
+                                <button data-spoller type="button" class="menu__arrow _headerarrowtwo _icon-arrow-down"></button>
                                 <ul class="menu__sub-list">
                                     <li class="menu__sub-item">
                                         <a href="#" class="menu__sub-link">Product 1</a>
