Try to made button

--- a/.dist/about.html
+++ b/.dist/about.html
@@ -19,7 +19,7 @@
                 </div>
 
 
-                <div class="header__menu _menu">
+                <div class="header__menu">
                     <nav class="menu__body">
                         <ul class="menu__list">
                             <li class="menu__item">
@@ -27,7 +27,7 @@
                             </li>
                             <li class="menu__item">
                                 <a href="#" class="menu__link">Услуги</a>
-                                <button data-spoller type="button" class="menu__arrow _headerarrowone _icon-arrow-down"></button>
+                                <button data-spoller type="button" class="menu__arrow _icon-arrow-down"></button>
                                 <ul class="menu__sub-list">
                                     <li class="menu__sub-item">
                                         <a href="#" class="menu__sub-link">Product 1</a>
@@ -48,7 +48,7 @@
                             </li>
                             <li class="menu__item">
                                 <a href="#" class="menu__link">Соглашения</a>
-                                <button data-spoller type="button" class="menu__arrow _headerarrowtwo _icon-arrow-down"></button>
+                                <button data-spoller type="button" class="menu__arrow _icon-arrow-down"></button>
                                 <ul class="menu__sub-list">
                                     <li class="menu__sub-item">
                                         <a href="#" class="menu__sub-link">Product 1</a>
@@ -66,8 +66,14 @@
                     </nav>
                 </div>
                 <div class="header__actions actions-header">
-                    <div class="actions-header__buttonsignin"><button>Войти</button></div>
-                    <div class="actions-header__buttonsignup">Зарегистрироваться</div>
+
+                    <a href="#" class="actions-header__buttonsignin">
+                        <span class="actions-header__buttonsignin __text">Вход</span>
+                    </a>
+                    <a href="#" class="actions-header__buttonsignup">
+                        <span class="actions-header__buttonsignup __text">Зарегистрироваться</span>
+                    </a>
+                    
                 </div>
             </div>
 
