Example of button
Примерная кнопка готова, реализована через тег button

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -57,7 +57,8 @@
                 <div class="header__actions actions-header">
 
                     <a href="#" class="actions-header__buttonsignin">
-                        <span class="actions-header__textin">Войти</span>
+                     <!--<span class="actions-header__textin">Войти</span>-->
+                        <button class="actions-header__textin">Войти</button>
                     </a>
                     <a href="#" class="actions-header__buttonsignup">
                         <span class="actions-header__textup">Зарегистрироваться</span>
