Add button with registration
Доделал две кнопки, нужно разобраться с позиционированием и отзывчивостью

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -61,7 +61,7 @@
                         <button class="actions-header__textin">Войти</button>
                     </a>
                     <a href="#" class="actions-header__buttonsignup">
-                        <span class="actions-header__textup">Зарегистрироваться</span>
+                        <button class="actions-header__textup">Зарегистрироваться</button>
                     </a>
                     
                 </div>
