--- a/src/html/header.html
+++ b/src/html/header.html
@@ -8,7 +8,7 @@
                 </div>
 
 
-                <div class="header__menu">
+                <div class="header__menu menu">
                     <nav class="menu__body">
                         <ul class="menu__list">
                             <li class="menu__item">
