--- a/.dist/about.html
+++ b/.dist/about.html
@@ -27,7 +27,7 @@
                             </li>
                             <li class="menu__item">
                                 <a href="#" class="menu__link">Услуги</a>
-                                <button data-spoller type="button" class="menu__arrow _icon-arrow-down"></button>
+                                <button data-spoller type="submit" class="menu__arrow _icon-arrow-down"></button>
                                 <ul class="menu__sub-list">
                                     <li class="menu__sub-item">
                                         <a href="#" class="menu__sub-link">Product 1</a>
@@ -45,7 +45,7 @@
                             </li>
                             <li class="menu__item">
                                 <a href="#" class="menu__link">Соглашения</a>
-                                <button data-spoller type="button" class="menu__arrow _icon-arrow-down"></button>
+                                <button data-spoller type="submit" class="menu__arrow _icon-arrow-down"></button>
                                 <ul class="menu__sub-list">
                                     <li class="menu__sub-item">
                                         <a href="#" class="menu__sub-link">Product 1</a>
@@ -75,6 +75,7 @@
 
         </div>
     </div>
+ 
 </header>
 
 
