--- a/src/html/header.html
+++ b/src/html/header.html
@@ -16,7 +16,7 @@
                             </li>
                             <li class="menu__item">
                                 <a href="#" class="menu__link">Услуги</a>
-                                <button data-spoller type="button" class="menu__arrow _icon-arrow-down"></button>
+                                <button data-spoller type="submit" class="menu__arrow _icon-arrow-down"></button>
                                 <ul class="menu__sub-list">
                                     <li class="menu__sub-item">
                                         <a href="#" class="menu__sub-link">Product 1</a>
@@ -34,7 +34,7 @@
                             </li>
                             <li class="menu__item">
                                 <a href="#" class="menu__link">Соглашения</a>
-                                <button data-spoller type="button" class="menu__arrow _icon-arrow-down"></button>
+                                <button data-spoller type="submit" class="menu__arrow _icon-arrow-down"></button>
                                 <ul class="menu__sub-list">
                                     <li class="menu__sub-item">
                                         <a href="#" class="menu__sub-link">Product 1</a>
@@ -64,5 +64,6 @@
 
         </div>
     </div>
+ 
 </header>
 
