--- a/.dist/about.html
+++ b/.dist/about.html
@@ -21,15 +21,15 @@
 
                 <div class="header__menu menu">
                     <nav class="menu__body">
-                        <ul class="menu__list">
+                        <ul data-spoller="768,max" class="menu__list">
                             <li class="menu__item">
                                 <a href="#" class="menu__link menu__link_aboutus">О нас</a>
                             </li>
                             <li class="menu__item">
                                 <a href="#" class="menu__link">Услуги</a>
-                                <button data-spoller type="submit" class="menu__arrow _icon-arrow-down"></button>
+                                <button data-spoller="768,max" type="button" class="menu__arrow _icon-arrow-down"></button>
                                 <ul class="menu__sub-list">
-                                    <li class="menu__sub-item">
+                                    <li class="menu__sub-item" >
                                         <a href="#" class="menu__sub-link">Product 1</a>
                                     </li>
                                     <li class="menu__sub-item">
@@ -45,7 +45,7 @@
                             </li>
                             <li class="menu__item">
                                 <a href="#" class="menu__link">Соглашения</a>
-                                <button data-spoller type="submit" class="menu__arrow _icon-arrow-down"></button>
+                                <button data-spoller type="button" class="menu__arrow _icon-arrow-down"></button>
                                 <ul class="menu__sub-list">
                                     <li class="menu__sub-item">
                                         <a href="#" class="menu__sub-link">Product 1</a>
