Добавлен бургер. Доработать.
Бургер появляется на маленьких экранах для отображения меню. Не доработан. Нужно добавить через js класс active и добавить классы меню через js.

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -59,9 +59,14 @@
                     </a>
                     
                 </div>
+                <button type="button" class="icon-menu">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
             </div>
 
-
+         
         </div>
     </div>
  
