--- a/.dist/about.html
+++ b/.dist/about.html
@@ -70,9 +70,14 @@
                     </a>
                     
                 </div>
+                <button type="button" class="icon-menu">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
             </div>
 
-
+         
         </div>
     </div>
  
