Добавлена структура футера html
Нужно доработать  кнопку и ее структуру

--- a/.dist/about.html
+++ b/.dist/about.html
@@ -95,6 +95,45 @@
                     </div>
 
                 </div>
+                <div class="footer__menu menu-footer">
+                    <div class="menu-footer__column">
+                        <button type="button" data-spoller class="menu-footer__title _footer-title">навигация</button>
+                        <ul class="menu-footer__list">
+                            <li><a href="" class="menu-footer__link">О нас</a></li>
+                            <li><a href="" class="menu-footer__link">Новости</a></li>
+                            <li><a href="" class="menu-footer__link">Служба поддержки</a></li>
+                            <li><a href="" class="menu-footer__link">Услуги</a></li>
+                        </ul>
+                    </div>
+                    <div class="menu-footer__column">
+                        <button type="button" data-spoller class="menu-footer__title _footer-title">о нас</button>
+                        <ul class="menu-footer__list">
+                            <li><a href="" class="menu-footer__link">О сервисе</a></li>
+                            <li><a href="" class="menu-footer__link">Наша команда</a></li>
+                            <li><a href="" class="menu-footer__link">Вакансии</a></li>
+                            <li><a href="" class="menu-footer__link">Инвесторы</a></li>
+                        </ul>
+                    </div>
+                    <div class="menu-footer__column">
+                        <button type="button" data-spoller class="menu-footer__title _footer-title">Служба поддержки</button>
+                        <ul class="menu-footer__list">
+                            <li><a href="" class="menu-footer__link">Соглашения</a></li>
+                            <li><a href="" class="menu-footer__link">Сообщества</a></li>
+                            <li><a href="" class="menu-footer__link">Связь с нами</a></li>
+                        </ul>
+                    </div>
+                    <div class="menu-footer__column">
+                        <button type="button" data-spoller class="menu-footer__title _footer-title">Подписка</button>
+                        <ul class="menu-footer__list">
+                            <li><a href="" class="menu-footer__link">Получайте специальные предложения и новости сервиса</a></li>
+                            <form action="#" class="subscribe__form">
+                                <input autocomplete="off"  type="text" name="form[]" data-error="Ошибка" data-value="" class="input _req _email" > 
+                                <button type="submit" class="subscribe__button _icon-send"></button>
+                            </form>
+                        </ul>
+                    </div>
+                </div>
+                <span class="footer__line"></span>
                 <div class="footer__buttombody">
                     <div class="footer__copyright"><a href="#"></a>Copyright © 2018 Toxin отель. Все права защищены.</div>
                     <div class="footer__mediaicons">
