--- a/.dist/index.html
+++ b/.dist/index.html
@@ -94,7 +94,7 @@
                     </div>
 
                 </div>
-                <div class="footer__menu menu-footer">
+                <div data-spollers="768,max" class="footer__menu menu-footer">
                     <div class="menu-footer__column">
                         <button type="button" data-spoller class="menu-footer__title _footer-title">навигация</button>
                         <ul class="menu-footer__list">
@@ -121,16 +121,14 @@
                             <li><a href="" class="menu-footer__link">Связь с нами</a></li>
                         </ul>
                     </div>
-                    <div class="menu-footer__column">
-                        <button type="button" data-spoller class="menu-footer__title _footer-title">Подписка</button>
-                        <ul class="menu-footer__list">
-                            <li><a href="" class="menu-footer__link">Получайте специальные предложения и новости сервиса</a></li>
-                            <form action="#" class="subscribe__form">
-                                <input autocomplete="off"  type="text" name="form[]" data-error="Ошибка" data-value="" class="input _req _email" > 
-                                <button type="submit" class="subscribe__button _icon-send"></button>
-                            </form>
-                        </ul>
-                    </div>
+                </div>
+                <div class="footer__subscribe subscribe">
+                    <div class="subscribe__title _footer-title">Подписка</div>
+                    <a href="" class="subscribe-footer__text">Получайте специальные предложения и новости сервиса</a>
+                    <form data-message="subscribe" data-test action="#" class="subscribe__form">
+                        <input autocomplete="off" type="text" name="form[]" data-error="Ошибка" data-value="Email" class="subscribe__input _req _email">
+                        <button type="submit" class="subscribe__button _icon-send"></button>
+                    </form>
                 </div>
                 <span class="footer__line"></span>
                 <div class="footer__buttombody">
