Сверстал кнопку, доделан футер
Нужно вставить кнопку в форму с вводом почты

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -40,8 +40,8 @@
                     <div class="subscribe__title _footer-title">Подписка</div>
                     <a href="" class="subscribe-footer__text">Получайте специальные предложения и новости сервиса</a>
                     <form data-message="subscribe" data-test action="#" class="subscribe__form">
-                        <input autocomplete="off" type="text" name="form[]" data-error="Ошибка" data-value="Email" class="subscribe__input _req _email">
-                        <button type="submit" class="subscribe__button _icon-send"></button>
+                        <label> <input autocomplete="off" type="text" name="form[]" data-error="Ошибка" data-value="Email" class="subscribe__input _req _email"></label>
+                        <button type="submit" class="subscribe__button _icone-insidebutton-right" ></button>
                     </form>
                 </div>
                 <span class="footer__line"></span>
