--- a/.dist/index.html
+++ b/.dist/index.html
@@ -125,8 +125,9 @@
                 <div class="footer__subscribe subscribe">
                     <div class="subscribe__title _footer-title">Подписка</div>
                     <a href="" class="subscribe-footer__text">Получайте специальные предложения и новости сервиса</a>
+                 
                     <form data-message="subscribe" data-test action="#" class="subscribe__form">
-                        <label> <input autocomplete="off" type="text" name="form[]" data-error="Ошибка" data-value="Email" class="subscribe__input _req _email"></label>
+                        <input autocomplete="off" type="text" name="form[]" data-error="Ошибка" data-value="Email" class="subscribe__input _req _email"> 
                         <button type="submit" class="subscribe__button _icone-insidebutton-right" ></button>
                     </form>
                 </div>
