--- a/.dist/index.html
+++ b/.dist/index.html
@@ -89,10 +89,8 @@
             <div class="footer__body">
                <div class="footer__mainblock">
                 <div class="footer__main">
-                    <div class="footer__logo"> 
-                        <a href="#" class="footer__logo"><img src="img/svgicons/Logo.svg" alt="лого"></a> 
-                        <div  class="footer__reward">Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»</div>
-                    </div>
+                        <a href="#" class="footer__logotip"><img src="img/svgicons/Logo.svg" alt="лого"></a> 
+                        <p class="footer__reward">Бронирование номеров в лучшем<br>отеле 2019 года по версии ассоциации «Отельные взгляды»</p>
 
                 </div>
                 <div data-spollers="768,max" class="footer__menu menu-footer">
