Fix margin and pading PP
Исправил марджины и паддинги в соответствии с pixelperfect

--- a/.dist/about.html
+++ b/.dist/about.html
@@ -90,7 +90,7 @@
             <div class="footer__body">
                <div class="footer__mainblock">
                 <div class="footer__main">
-                        <a href="#" class="footer__logotip"><img src="img/svgicons/Logo.svg" alt="лого"></a> 
+                        <a href="#" class="footer__logotip"><img src="img/svgicons/LogoAndText.svg" alt="лого"></a> 
                         <p class="footer__reward">Бронирование номеров в лучшем<br>отеле 2019 года по версии ассоциации «Отельные взгляды»</p>
 
                 </div>
